# emoji-index

./: README.md  pyproject.toml  test
.github/workflows/: develop-deploy-to-caddy.yaml  main-deploy-to-caddy.yaml  publish-to-pypi.yaml
data/: parser.py
src/: main.py
src/emoji-index/data/: emojis.py
src/emoji_index/: __init__.py
src/emoji_index/data/: emojis.py
