[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emoji_index"
version = "0.1.1"
authors = [{name="nQuest Corporation"}]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "emoji>=2.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]